--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,33 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.javax.batch-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.batch-api.jar
+file.reference.javax.ejb-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.ejb-api.jar
+file.reference.javax.el.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.el.jar
+file.reference.javax.enterprise.concurrent-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.enterprise.concurrent-api.jar
+file.reference.javax.enterprise.concurrent.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.enterprise.concurrent.jar
+file.reference.javax.enterprise.deploy-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.enterprise.deploy-api.jar
+file.reference.javax.faces.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.faces.jar
+file.reference.javax.inject.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.inject.jar
+file.reference.javax.interceptor-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.interceptor-api.jar
+file.reference.javax.jms-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.jms-api.jar
+file.reference.javax.json.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.json.jar
+file.reference.javax.mail.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.mail.jar
+file.reference.javax.management.j2ee-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.management.j2ee-api.jar
+file.reference.javax.persistence.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.persistence.jar
+file.reference.javax.resource-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.resource-api.jar
+file.reference.javax.security.auth.message-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.security.auth.message-api.jar
+file.reference.javax.security.jacc-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.security.jacc-api.jar
+file.reference.javax.servlet-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.servlet-api.jar
+file.reference.javax.servlet.jsp-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.servlet.jsp-api.jar
+file.reference.javax.servlet.jsp.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.servlet.jsp.jar
+file.reference.javax.servlet.jsp.jstl-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.servlet.jsp.jstl-api.jar
+file.reference.javax.servlet.jsp.jstl.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.servlet.jsp.jstl.jar
+file.reference.javax.transaction-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.transaction-api.jar
+file.reference.javax.websocket-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.websocket-api.jar
+file.reference.javax.ws.rs-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.ws.rs-api.jar
+file.reference.javax.xml.registry-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.xml.registry-api.jar
+file.reference.javax.xml.rpc-api.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\modules\\javax.xml.rpc-api.jar
 file.reference.objectdb.jar=lib\\objectdb-2.6.7_05\\bin\\objectdb.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +67,34 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.objectdb.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.javax.batch-api.jar}:\
+    ${file.reference.javax.ejb-api.jar}:\
+    ${file.reference.javax.el.jar}:\
+    ${file.reference.javax.enterprise.concurrent-api.jar}:\
+    ${file.reference.javax.enterprise.concurrent.jar}:\
+    ${file.reference.javax.enterprise.deploy-api.jar}:\
+    ${file.reference.javax.faces.jar}:\
+    ${file.reference.javax.inject.jar}:\
+    ${file.reference.javax.interceptor-api.jar}:\
+    ${file.reference.javax.jms-api.jar}:\
+    ${file.reference.javax.json.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.management.j2ee-api.jar}:\
+    ${file.reference.javax.persistence.jar}:\
+    ${file.reference.javax.resource-api.jar}:\
+    ${file.reference.javax.security.auth.message-api.jar}:\
+    ${file.reference.javax.security.jacc-api.jar}:\
+    ${file.reference.javax.servlet-api.jar}:\
+    ${file.reference.javax.servlet.jsp-api.jar}:\
+    ${file.reference.javax.servlet.jsp.jar}:\
+    ${file.reference.javax.servlet.jsp.jstl-api.jar}:\
+    ${file.reference.javax.servlet.jsp.jstl.jar}:\
+    ${file.reference.javax.transaction-api.jar}:\
+    ${file.reference.javax.websocket-api.jar}:\
+    ${file.reference.javax.ws.rs-api.jar}:\
+    ${file.reference.javax.xml.registry-api.jar}:\
+    ${file.reference.javax.xml.rpc-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
