--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 file.reference.objectdb.jar=lib\\objectdb-2.6.7_05\\bin\\objectdb.jar
 includes=**
 j2ee.compile.on.save=true
@@ -52,14 +53,17 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.objectdb.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${libs.eclipselinkmodelgen.classpath}:\
+    ${libs.eclipselink.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
