--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,7 +20,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/HomePageServlet
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -37,7 +37,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
-file.reference.objectdb.jar=lib\\objectdb-2.6.7_05\\bin\\objectdb.jar
+file.reference.objectdb.jar=lib/objectdb-2.6.7_05/bin/objectdb.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -52,10 +52,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.objectdb.jar}:\
     ${libs.eclipselink.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.objectdb.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
